# yup-oauth2-metadata

./: Cargo.toml  README.md
src/: lib.rs  main.rs
