[package]
name = "yup-oauth2-metadata"
version = "0.0.1"
edition = "2018"

[dependencies]
yup-oauth2 = "1.0.12"
log = "0.4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
futures = "0.3.5"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }

[lib]
name = "metadata"
path = "src/lib.rs"